--- a/src/main/resources/templates/addmovie.html
+++ b/src/main/resources/templates/addmovie.html
@@ -38,6 +38,11 @@
                 <div style="clear: both; display: block; height: 10px;"></div>
             </div>
             <div class="form-group">
+                <label for="review">Review</label>
+                <textarea id="review" th:field="*{review}" rows="5" cols="50"></textarea>
+                <div style="clear: both; display: block; height: 10px;"></div>
+            </div>
+            <div class="form-group">
                 <label for="publicationYear">Publication year</label>
                 <input type="text" id="publicationYear" th:field="*{publicationYear}" />
                 <div style="clear: both; display: block; height: 10px;"></div>
