--- a/src/main/resources/templates/categorylist.html
+++ b/src/main/resources/templates/categorylist.html
@@ -27,6 +27,12 @@
             <td th:text="${category.categoryId}"> </td>
             <td th:text="${category.categoryName}"> </td>
         </tr>
+        <td>
+            <a th:href="@{/editcategory/{id}(id=${category.categoryId})}" class="btn btn-warning" 
+                role="button">Edit</a>
+            <a th:href="@{/deletecategory/{id}(id=${category.categoryId})}" class="btn btn-danger"
+                role="button">Delete</a>
+        </td>
     </table>
     <p><a th:href="@{/addcategory}" class="btn btn-success" role="button">Add category</a></p>
 
