--- a/src/main/resources/templates/editmovie.html
+++ b/src/main/resources/templates/editmovie.html
@@ -43,6 +43,12 @@
         </div>
 
         <div class="form-group">
+            <label for="review">Review</label>
+            <textarea id="review" th:field="*{review}" rows="5" cols="50"></textarea>
+            <div style="clear: both; display: block; height: 10px;"></div>
+        </div>
+
+        <div class="form-group">
             <label for="publicationYear">Publication year</label>
             <input type="text" id="publicationYear" th:field="*{publicationYear}" />
             <div style="clear: both; display: block; height: 10px;"></div>
