--- a/src/main/resources/templates/movielist.html
+++ b/src/main/resources/templates/movielist.html
@@ -62,6 +62,8 @@
         <p><a th:href="@{/addmovie}" class="btn btn-success" role="button">Add movie</a></p>
     </td>
 
+<a href="#" th:href="@{/index}">Back to the homepage</a>
+
 </body>
 
 </html>
