--- a/src/main/resources/templates/categorylist.html
+++ b/src/main/resources/templates/categorylist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
     <meta charset="UTF-8">
@@ -16,6 +16,16 @@
 <body>
 
     <h1>Categories</h1>
+
+    <div class="col-md-4" sec:authorize="hasAuthority('ADMIN')">
+        <h3>Signed in: <span sec:authentication="name"></span></h3>
+    </div>
+    <div class="col-md-4" style="padding:20px 0" sec:authorize="hasAuthority('ADMIN')">
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Sign Out" class="btn btn-sm btn-danger" />
+        </form>
+    </div>
+
     <table class="table table-striped">
         <thead>
             <tr>
