--- a/src/main/resources/templates/streamingservicelist.html
+++ b/src/main/resources/templates/streamingservicelist.html
@@ -17,7 +17,13 @@
 
     <h1>Streaming services</h1>
 
-    <div class="col-md-4">
+    <div class="col-md-4" sec:authorize="hasAuthority('ADMIN')">
+        <h3>Signed in: <span sec:authentication="name"></span></h3>
+    </div>
+    <div class="col-md-4" style="padding:20px 0" sec:authorize="hasAuthority('ADMIN')">
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Sign Out" class="btn btn-sm btn-danger" />
+        </form>
     </div>
 
     <table class="table table-striped">
@@ -52,6 +58,8 @@
     <td sec:authorize="hasAuthority('ADMIN')">
     <p><a th:href="@{/addstreamingservice}" class="btn btn-success" role="button">Add streaming service</a></p>
     </td>
+
+    <a href="#" th:href="@{/index}">Back to the homepage</a>
 
 </body>
 
