--- a/src/main/resources/templates/editcategory.html
+++ b/src/main/resources/templates/editcategory.html
@@ -16,9 +16,9 @@
 
 <body>
     <h1>Edit category</h1>
-    <form th:object="${category}" th:action="@{/save}" method="post">
+    <form th:object="${category}" th:action="@{/savecategory}" method="post">
 
-        <input type="hidden" th:field="*{id}" />
+        <input type="hidden" th:field="*{categoryId}" />
 
         <div class="form-group">
             <label for="categoryname">Name</label>
