--- a/src/main/resources/templates/editstreamingservice.html
+++ b/src/main/resources/templates/editstreamingservice.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1>Edit streaming service</h1>
-    <form th:object="${streamingservice}" th:action="@{/save}" method="post">
+    <form th:object="${streamingservice}" th:action="@{/savestreamingservice}" method="post">
 
         <input type="hidden" th:field="*{id}" />
 
