monivalinta elokuviin striimipalveluille

--- a/src/main/resources/templates/addmovie.html
+++ b/src/main/resources/templates/addmovie.html
@@ -9,9 +9,11 @@
         #categorylist {
             width: 300px;
         }
+
         #streamingServiceList {
             width: 300px;
         }
+
         body {
             margin: 10px;
         }
@@ -60,12 +62,15 @@
                         th:text="${category.categoryName}"></option>
                 </select>
             </div>
-            <div class="form-group"> 
-                <label for="streamingServiceList">Streamingservice</label>
-                <select id="streamingServiceList" th:field="*{streamingServices}" class="form-control">
-                    <option th:each="streamingservice : ${streamingservices}" th:value="${streamingservice.id}"
-                        th:text="${streamingservice.serviceName}"></option>
-                </select>
+
+            <div class="form-group">
+                <label>Streaming Services</label>
+                <div th:each="streamingservice : ${streamingservices}">
+                    <label>
+                        <input type="checkbox" th:field="*{streamingServices}" th:value="${streamingservice.id}" />
+                        <span th:text="${streamingservice.serviceName}"></span>
+                    </label>
+                </div>
             </div>
 
             <input type="submit" value="Save" />
