login sivulle vielä linkki

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,4 +20,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     </form>
 </body>
 
+<a href="#" th:href="@{/index}">Back to the homepage</a>
+
 </html>
